<resources>
    <string name="app_name">Crypto\nPal</string>
    <string name="null_space" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coins">Coins</string>
    <string name="watchlist">Watchlist</string>
    <string name="news">News</string>
    <string name="more">More</string>
    <string name="sort_by">Sort by</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="change_24h">24H Change</string>
    <string name="change_7d">7D Change</string>
    <string name="save">Save</string>
</resources>